--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,1 +1,13 @@
 @import 'vendor/normalize.less';
+@import 'components/variables.less';
+@import 'components/container.less';
+@import 'components/ui.less';
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    color: #2c2725;
+}
+
