--- a/src/jade/layouts/blocks/header/_menu.jade
+++ b/src/jade/layouts/blocks/header/_menu.jade
@@ -4,4 +4,4 @@ nav
     ul.menu
         each menu in menus
             li.menu-item.i
-                a(href="#{#{menu['link']}") #{menu['name'][lang]}
+                a(href="#{menu['link']}") #{menu['name'][lang]}
