--- a/src/jade/layouts/default.jade
+++ b/src/jade/layouts/default.jade
@@ -1,29 +1,31 @@
 doctype html
-html
+html(lang="pt-br")
     head
         block meta
-            include parts/meta.jade
+            include blocks/_meta.jade
         title
-            block title 
-            | &nbsp;| Renan Dias
+            block title
+            | &nbsp;| #{base_title}
         block style
-            include parts/style.jade
-        //HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
-        //WARNING: Respond.js doesn't work if you view the page via file://
-        //if lt IE 9
-            script(src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js")
-            script(src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js")
-        //endif
+            include blocks/_style.jade
+        //- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
+        //- WARNING: Respond.js doesn't work if you view the page via file://
+
+        | <!--[if lt IE 9]>
+        script(src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js")
+        script(src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js")
+        | <![endif]-->
+
     body.layout-default
         div#page
             header#header
                 block header
-                    include parts/header.jade
+                    include blocks/_header.jade
             main#content
                 block content
-                    include parts/content.jade
+                    include blocks/_content.jade
             footer#footer
                 block footer
-                    include parts/footer.jade
+                    include blocks/_footer.jade
         block script
-            include parts/script.jade
+            include blocks/_script.jade
