Bower amd jade fixes

--- a/src/jade/layouts/blocks/header/_lang.jade
+++ b/src/jade/layouts/blocks/header/_lang.jade
@@ -1,1 +1,6 @@
-div lang
+div.lang-swicher
+    div.swicher.lang-pt
+        a(href="./pt", title="Português")
+            img.flag(src="./img/flag/pt.png", alt="Português")
+        a(href="./en", title="English")
+            img.flag(src="./img/flag/en.png", alt="English")
