--- a/src/jade/layouts/default.jade
+++ b/src/jade/layouts/default.jade
@@ -5,7 +5,7 @@ html(lang="pt-br")
             include blocks/_meta.jade
         title
             block title
-            | &nbsp;| #{base_title}
+            | &nbsp;| #{siteName}
         block style
             include blocks/_style.jade
         //- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
