--- a/src/less/base/base.less
+++ b/src/less/base/base.less
@@ -1,4 +1,5 @@
 @fontNormal: 16px;
+@siteBg: #171313;
 
 * {
     box-sizing: border-box;
@@ -8,4 +9,5 @@ body {
     font-family: sans-serif, monospace, serif;
     font-size: @fontNormal;
     line-height: 20px;
+    background-color: @siteBg;
 }
