--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,3 +1,5 @@
+/** Renan Dias (Portifolio) - renanmfd@gmail.com **/
+
 @import 'base/normalize';
 @import 'base/variables';
 @import 'base/mixing';
