--- a/src/jade/layouts/blocks/header/_title.jade
+++ b/src/jade/layouts/blocks/header/_title.jade
@@ -1,20 +1,9 @@
 div.ui-triangle.big
     h1.dev-name Renan Dias
-    h2.dev-title Web developer
+    h2.dev-title Web developer 2
     div.ui-triangle.medium
-        div.ui-triangle.small
-            a(href="#", title="Gmail")
-                span.hidden Gmail
-                img(src="", alt="Gmail")
-        div.ui-triangle.small
-            a(href="#", title="Gmail")
-                span.hidden Gmail
-                img(src="", alt="Gmail")
-        div.ui-triangle.small
-            a(href="#", title="Gmail")
-                span.hidden Gmail
-                img(src="", alt="Gmail")
-        div.ui-triangle.small
-            a(href="#", title="Gmail")
-                span.hidden Gmail
-                img(src="", alt="Gmail")
+        each network in socialNetworks
+            div.ui-triangle.small(style="background:#{network.color}")
+                a(href="#{network.link}", title="#{network.name}")
+                    span.hidden #{network.name}
+                    img(src="./img/social/#{network.logo}", alt="#{network.name}")
