--- a/src/jade/layouts/blocks/header/_title.jade
+++ b/src/jade/layouts/blocks/header/_title.jade
@@ -1,6 +1,6 @@
-div.ui-triangle.big
+div#titleTriangle
     h1.dev-name Renan Dias
-    h2.dev-title Web developer 2
+    h2.dev-title Web developer
     div.ui-triangle.medium
         each network in socialNetworks
             div.ui-triangle.small(style="background:#{network.color}")
