--- a/src/jade/layouts/blocks/header/_lang.jade
+++ b/src/jade/layouts/blocks/header/_lang.jade
@@ -1,4 +1,4 @@
-div.lang-swicher
+div#langSwicher
     div.swicher.lang-pt
         a(href="./pt", title="Português")
             img.flag(src="./img/flag/pt.png", alt="Português")
