--- a/src/jade/layouts/blocks/_style.jade
+++ b/src/jade/layouts/blocks/_style.jade
@@ -1,2 +1,3 @@
+link(rel="stylesheet", href="./lib/normalize-css/normalize.css")/
 link(rel="stylesheet", href="./lib/skeleton/css/skeleton.css")/
 link(rel="stylesheet", href="./css/style.min.css")/
