--- a/src/jade/layouts/blocks/_style.jade
+++ b/src/jade/layouts/blocks/_style.jade
@@ -1,3 +1,4 @@
 link(rel="stylesheet", href="./lib/normalize-css/normalize.css")/
+link(href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300,400italic|Roboto+Slab:400,700', rel='stylesheet', type='text/css')/
 link(rel="stylesheet", href="./lib/skeleton/css/skeleton.css")/
 link(rel="stylesheet", href="./css/style.min.css")/
