--- a/src/less/components/header.less
+++ b/src/less/components/header.less
@@ -1,11 +1,12 @@
 @headerDevCl: #FFFFFF;
 @headerDevHeight: 300px;
 @headerDevNameCl: #000000;
-@headerDevTitleCl: #3CA340;
+@headerDevTitleCl: #7DAF25;
 @headerSwicher: 100px;
 @headerMenuCl: #FFFFFF;
 @headerMenuBCl: #179830;
 @headerMenuFs: 24px;
+@headerSocialSize: 70px;
 
 #header {
     position: relative;
@@ -14,7 +15,9 @@
 #developerInfo {
     position: relative;
     height: @headerDevHeight;
+    width: @headerDevHeight;
     padding-top: 20px;
+    background-color: #FFFFFF;
 
     &:after {
         content: '';
@@ -38,24 +41,154 @@
     .dev-name {
         margin-bottom: 10px;
         font-size: 36px;
+        font-weight: bold;
         text-transform: uppercase;
         color: @headerDevNameCl;
     }
     .dev-title {
-        margin-bottom: 10px;
-        font-size: 20px;
+        margin-bottom: 20px;
+        font-size: 23px;
         text-transform: uppercase;
         text-decoration: underline;
         color: @headerDevTitleCl;
     }
     .dev-links {
-        .link {
-            a {
+        position: absolute;
+        perspective: 1000;
+    }
+    .link {
+        position: absolute;
+        width: @headerSocialSize;
+        height: @headerSocialSize;
+        overflow: hidden;
 
+        .link-content {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            transition: all ease-in-out 0.5s;
+            transform-origin: center center;
+            transform-style: preserve-3d;
+
+            &.back {
+                transform: rotate3d(45, 45, 0, 180deg);
+            }
+        }
+        &:hover .link-content {
+            transform: rotate3d(45, 45, 0, 180deg);
+
+            &.back {
+                transform: rotate3d(45, 45, 0, 0);
+            }
+        }
+
+        &.gmail {
+            top: 0;
+            left: 0;
+
+            .link-content {background-color: #DD4B39;}
+            .link-content.back {
+                .link-img {background-color: #DD4B39;}
+                .svg-wrapper path {fill: #B51906;}
             }
             img {
-
+                top: 1px;
+                left: 2px;
+                width: 50%;
             }
+            .svg-wrapper {
+                top: 0;
+                left: 2px;
+            }
+            .link-img {
+                background-color: #FFFFFF;
+            }
+        }
+        &.github {
+            top: 3px;
+            left: 3px;
+
+            .link-content {background-color: #000000;}
+            .link-content.back {
+                .link-img {background-color: #000000;}
+                .svg-wrapper path {fill: #FFFFFF;}
+            }
+            img {
+                bottom: 2px;
+                right: 2px;
+                width: 50%;
+            }
+            .svg-wrapper {
+                top: 24px;
+                left: 24px;
+            }
+            .link-img {
+                top: 14%;
+                left: 14%;
+                background-color: #FFFFFF;
+            }
+        }
+        &.facebook {
+            top: 0;
+            left: @headerSocialSize + 7px;
+
+            .link-content {background-color: #3B5998;}
+            .link-content.back {
+                .link-img {background-color: #FFFFFF;}
+                .svg-wrapper path {fill: #3B5998;}
+            }
+            img {
+                bottom: 14px;
+                left: 10px;
+            }
+            .svg-wrapper {
+                top: 7px;
+                left: 5px;
+                
+                path {fill: #FFFFFF;}
+            }
+        }
+        &.linkedin {
+            top: @headerSocialSize + 7px;
+            left: 0;
+
+            .link-content {background-color: #0077B5;}
+            .link-content.back {
+                .link-img {background-color: #FFFFFF;}
+                .svg-wrapper path {fill: #0077B5;}
+            }
+            img {
+                top: 0;
+                left: 0;
+            }
+            .svg-wrapper {
+                top: 1px;
+                left: 6px;
+                
+                path {fill: #FFFFFF;}
+            }
+        }
+
+        a {
+            display: block;
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+        .link-img {
+            position: relative;
+            width: 80%;
+            height: 80%;
+            top: 6%;
+            left: 6%;
+            overflow: hidden;
+        }
+        img,
+        .svg-wrapper {
+            position: absolute;
         }
     }
 }
