header and footer small

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -5,7 +5,7 @@ block title
 
 block content
 
-    div
+    div.container
        | Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        | Mauris aliquet malesuada feugiat. Curabitur fermentum
        | bibendum nulla, non dictum ipsum tincidunt non. Quisque
