--- a/src/jade/layouts/blocks/_footer.jade
+++ b/src/jade/layouts/blocks/_footer.jade
@@ -1,2 +1,21 @@
 div.container
-    .triangle footer
+    div.content
+        nav.footer-menus
+            div.menu-wrapper.menu-posts
+                h3.menu-title Posts
+                ul.menu
+                    li: a.menu-link(href="#") Vazio Vazio
+                    li: a.menu-link(href="#") Vazio Vazio Vazio
+                    li: a.menu-link(href="#") Vazio Vazio
+                    li: a.menu-link(href="#") Vazio Vazio Vazio
+            div.menu-wrapper.menu-important
+                h3.menu-title Links Importantes
+                ul.menu
+                    li: a.menu-link(href="#") Blog
+                    li: a.menu-link(href="#") Trabalhos recentes
+                    li: a.menu-link(href="#") Curriculum (CV)
+                    li: a.menu-link(href="#") Sobre mim
+    div.decoration
+        div.dec-item.dec-top
+        div.dec-item.dec-bottom-left
+        div.dec-item.dec-bottom-right
