--- a/src/jade/layouts/blocks/header/_lang.jade
+++ b/src/jade/layouts/blocks/header/_lang.jade
@@ -1,6 +1,6 @@
 div#langSwicher
     div.swicher.lang-pt
-        a(href="./pt", title="Português")
+        a.swicher-link(href="./pt", title="Português")
             img.flag(src="./img/flag/pt.png", alt="Português")
-        a(href="./en", title="English")
+        a.swicher-link(href="./en", title="English")
             img.flag(src="./img/flag/en.png", alt="English")
