--- a/src/jade/layouts/blocks/header/_title.jade
+++ b/src/jade/layouts/blocks/header/_title.jade
@@ -1,6 +1,6 @@
 div#developerInfo.triangle
     h1.dev-name Renan Dias
-    h2.dev-title Web developer
+    h2.dev-title Web Developer
     div.dev-links.clearfix
         div.link.triangle.gmail
             a(href="mailto:renanmfd@gmail.com", title="Gmail")
