--- a/src/jade/layouts/default.jade
+++ b/src/jade/layouts/default.jade
@@ -30,5 +30,8 @@ html(lang="pt-br")
             footer#footer
                 block footer
                     include blocks/_footer.jade
+            div#page-bottom
+                div.container
+                    p &copy Todos os direitos reservados.
         block script
             include blocks/_script.jade
