--- a/src/jade/layouts/blocks/header/_menu.jade
+++ b/src/jade/layouts/blocks/header/_menu.jade
@@ -4,4 +4,4 @@ nav#mainMenu
     ul.menu
         each menu in menus
             li.menu-item
-                a(href="#{menu.link}") #{menu.name.lang}
+                a(href="#{menu.link}") #{menu.name[lang]}
