--- a/src/less/components/header.less
+++ b/src/less/components/header.less
@@ -1,15 +1,6 @@
-@headerDevCl: #FFFFFF;
-@headerDevHeight: 300px;
-@headerDevNameCl: #000000;
-@headerDevTitleCl: #7DAF25;
-@headerSwicher: 100px;
-@headerMenuCl: #FFFFFF;
-@headerMenuBCl: #179830;
-@headerMenuFs: 24px;
-@headerSocialSize: 70px;
-
 #header {
     position: relative;
+    min-height: 320px;
 }
 
 #developerInfo {
@@ -47,8 +38,7 @@
     }
     .dev-title {
         margin-bottom: 20px;
-        font-size: 23px;
-        text-transform: uppercase;
+        font-size: 26px;
         text-decoration: underline;
         color: @headerDevTitleCl;
     }
@@ -89,10 +79,10 @@
             top: 0;
             left: 0;
 
-            .link-content {background-color: #DD4B39;}
+            .link-content {background-color: @gmail;}
             .link-content.back {
-                .link-img {background-color: #DD4B39;}
-                .svg-wrapper path {fill: #B51906;}
+                .link-img {background-color: @gmail;}
+                .svg-wrapper path {fill: darken(@gmail, 15%);}
             }
             img {
                 top: 1px;
@@ -111,9 +101,9 @@
             top: 3px;
             left: 3px;
 
-            .link-content {background-color: #000000;}
+            .link-content {background-color: @github;}
             .link-content.back {
-                .link-img {background-color: #000000;}
+                .link-img {background-color: @github;}
                 .svg-wrapper path {fill: #FFFFFF;}
             }
             img {
@@ -135,10 +125,10 @@
             top: 0;
             left: @headerSocialSize + 7px;
 
-            .link-content {background-color: #3B5998;}
+            .link-content {background-color: @facebook;}
             .link-content.back {
                 .link-img {background-color: #FFFFFF;}
-                .svg-wrapper path {fill: #3B5998;}
+                .svg-wrapper path {fill: @facebook;}
             }
             img {
                 bottom: 14px;
@@ -155,10 +145,10 @@
             top: @headerSocialSize + 7px;
             left: 0;
 
-            .link-content {background-color: #0077B5;}
+            .link-content {background-color: @linkedin;}
             .link-content.back {
                 .link-img {background-color: #FFFFFF;}
-                .svg-wrapper path {fill: #0077B5;}
+                .svg-wrapper path {fill: @linkedin;}
             }
             img {
                 top: 0;
@@ -184,6 +174,8 @@
             height: 80%;
             top: 6%;
             left: 6%;
+            border-top-right-radius: 25px;
+            border-bottom-left-radius: 25px;
             overflow: hidden;
         }
         img,
@@ -194,20 +186,43 @@
 }
 
 #mainMenu {
-    margin-left: @headerDevHeight;
-    margin-right: @headerSwicher;
-
-    .menu-item {
-
+    margin-top: -80px;
+    
+    @media screen and (min-width: 360px) {margin-top: -100px;}
+    @media screen and (min-width: 380px) {margin-top: -120px;}
+    @media screen and (min-width: 420px) {margin-top: -140px;}
+    @media screen and (min-width: 440px) {margin-top: -160px;}
+    @media screen and (min-width: 460px) {margin-top: -180px;}
+    @media screen and (min-width: 480px) {margin-top: -200px;}
+    @media screen and (min-width: 500px) {margin-top: -220px;}
+    
+    ul {
+        list-style: none;
+        text-align: right;
+        
+        li {
+            margin: 0;
+        }
+        
         a {
-            padding: 10px 0;
-            font-size: @headerMenuFs;
-            color: @headerMenuCl;
-            border: 2px solid transparent;
+            display: inline-block;
+            padding-bottom: 0px;
+            margin-bottom: 15px;
+            border-bottom: 2px solid transparent;
+            font-size: 20px;
+            font-weight: 200;
+            text-transform: uppercase;
+            text-decoration: none;
+            color: #FFFFFF;
             opacity: 0.7;
-
+            transition: all ease-in-out 0.3s;
+            
+            &.active {
+                border-color: @headerDevTitleCl;
+            }
+            
             &:hover {
-                border-color: @headerMenuBCl;
+                text-shadow: 0 0 10px #FFFFFF;
                 opacity: 1;
             }
         }
@@ -216,7 +231,28 @@
 
 #langSwicher {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 160px;
+    right: 20px;
     width: @headerSwicher;
+    
+    @media screen and (min-width: 360px) {top: 140px;}
+    @media screen and (min-width: 380px) {top: 120px;}
+    @media screen and (min-width: 400px) {right: 0;}
+    @media screen and (min-width: 420px) {top: 100px;}
+    @media screen and (min-width: 440px) {top: 80px;}
+    @media screen and (min-width: 460px) {top: 60px;}
+    @media screen and (min-width: 480px) {top: 40px;}
+    @media screen and (min-width: 500px) {top: 20px;}
+    
+    .swicher-link {
+        display: inline-block;
+        vertical-align: top;
+        
+        &:first-child {
+            margin-right: 10px;
+        }
+    }
+    img {
+        display: block;
+    }
 }
