--- a/src/jade/layouts/blocks/_svg.jade
+++ b/src/jade/layouts/blocks/_svg.jade
@@ -1,4 +1,4 @@
-svg.clip-svg
+svg.clip-svg(xmlns="http://www.w3.org/2000/svg")
     defs
         clipPath#hexagon-clip(clipPathUnits="objectBoundingBox")
             polygon(points="0.5 0, 1 0.25, 1 0.75, 0.5 1, 0 0.75, 0 0.25")/
