Triangle fix quotes

--- a/src/less/base/base.less
+++ b/src/less/base/base.less
@@ -13,22 +13,22 @@ body {
 .triangle {
     -webkit-clip-path: polygon(0% 0%, 100% 0%, 0% 100%);
     clip-path: polygon(0% 0%, 100% 0%, 0% 100%);
-    -webkit-clip-path: url('#triangle-clip');
-    clip-path: url('#triangle-clip');
+    -webkit-clip-path: url(#triangle-clip);
+    clip-path: url(#triangle-clip);
 }
 
 .triangle-reverse {
     -webkit-clip-path: polygon(100% 0%, 100% 100%, 0% 100%);
     clip-path: polygon(100% 0%, 100% 100%, 0% 100%);
-    -webkit-clip-path: url('#triangle-reverse-clip');
-    clip-path: url('#triangle-reverse-clip');
+    -webkit-clip-path: url(#triangle-reverse-clip);
+    clip-path: url(#triangle-reverse-clip);
 }
 
 .hexagon {
     -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
     clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-    -webkit-clip-path: url('#hexagon-clip');
-    clip-path: url('#hexagon-clip');
+    -webkit-clip-path: url(#hexagon-clip);
+    clip-path: url(#hexagon-clip);
 }
 
 .clearfix() {
